refactor: full UUID migration — eliminate Long userId everywhere
Migrate all FK columns from user_id bigint to user_uuid UUID.
Remove UserIdResolver indirection. GatewayUser no longer carries
Long ID. ScyllaDB tables use UUID. Redis keys use UUID strings.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>