@@ -15,51 +15,49 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.UUID;
 
 /**
  * Reads X-User-* headers set by the API gateway after JWT validation.
  * Populates SecurityContext and sets GatewayUser as a request attribute.
- * Primary identifier is X-User-UUID (Keycloak subject). The Long userId
- * is resolved via {@link UserIdResolver} from the local user table.
+ * Primary identifier is X-User-UUID (Keycloak subject).
  */
 @Component
 @RequiredArgsConstructor
 public class GatewayAuthFilter extends OncePerRequestFilter {
 
     private final UserCacheService userCacheService;
-    private final UserIdResolver userIdResolver;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
-        String userUuid = request.getHeader("X-User-UUID");
+        String userUuidStr = request.getHeader("X-User-UUID");
 
-        if (userUuid != null && !userUuid.isBlank()) {
-            String permissions = request.getHeader("X-User-Permissions");
-            List<String> permList = permissions != null && !permissions.isBlank()
-                    ? Arrays.asList(permissions.split(","))
-                    : List.of();
+        if (userUuidStr != null && !userUuidStr.isBlank()) {
+            try {
+                UUID userUuid = UUID.fromString(userUuidStr);
+                String permissions = request.getHeader("X-User-Permissions");
+                List<String> permList = permissions != null && !permissions.isBlank()
+                        ? Arrays.asList(permissions.split(","))
+                        : List.of();
 
-            String email = request.getHeader("X-User-Email");
-            Long userId = userIdResolver.resolve(userUuid);
+                String email = request.getHeader("X-User-Email");
 
-            var user = new GatewayUser(
-                    userUuid,
-                    email,
-                    permList,
-                    userId
-            );
+                var user = new GatewayUser(userUuid, email, permList);
 
-            request.setAttribute(GatewayUser.REQUEST_ATTRIBUTE, user);
-            if (userId != null && email != null) {
-                userCacheService.cacheUser(userId, email, true);
+                request.setAttribute(GatewayUser.REQUEST_ATTRIBUTE, user);
+                if (email != null) {
+                    userCacheService.cacheUser(userUuid, email, true);
+                }
+
+                var authorities = permList.stream()
+                        .map(SimpleGrantedAuthority::new)
+                        .toList();
+                var auth = new UsernamePasswordAuthenticationToken(user, null, authorities);
+                SecurityContextHolder.getContext().setAuthentication(auth);
+            } catch (IllegalArgumentException _) {
+                // Invalid UUID — skip authentication
             }
-
-            var authorities = permList.stream()
-                    .map(SimpleGrantedAuthority::new)
-                    .toList();
-            var auth = new UsernamePasswordAuthenticationToken(user, null, authorities);
-            SecurityContextHolder.getContext().setAuthentication(auth);
         }
 
         filterChain.doFilter(request, response);
